deploy/deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webtool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webtool
  template:
    metadata:
      labels:
        app: webtool
    spec:
      serviceAccountName: default
      containers:
        - name: webtool
          image: 
          ports:
            - containerPort: 3000
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
