deploy/deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webtool
  labels:
    app: webtool
spec:
  ports:
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: webtool
