deploy/deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: webtool
  name: webtool
spec:
  host: 

  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: webtool
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
